added all refs to history

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1945,7 +1945,33 @@ lts.fzu.cz/pdf/d-js.pdf
 
 
 
-
+@article{rayleigh1892,
+  title={On the influence of obstacles arranged in rectangular order upon the properties of a medium},
+  author={Rayleigh, Lord},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={34},
+  number={211},
+  pages={481--502},
+  year={1892},
+  publisher={Taylor \& Francis}
+}
+@online{emerson,
+  author = {Emerson, D},
+  title = {Jagadis Chandra Bose:  Millimetre wave research in the nineteenth century},
+  year = 1998,
+  url = {https://www.cv.nrao.edu/~demerson/bose/bose.html},
+  urldate = {2015-07-30}
+}
+@article{kock1948metallic,
+  title={Metallic delay lenses},
+  author={Kock, Winston E},
+  journal={Bell System Technical Journal},
+  volume={27},
+  number={1},
+  pages={58--82},
+  year={1948},
+  publisher={Wiley Online Library}
+}
 @article{brown1955properties,
   title={The properties of artificial dielectrics at centimetre wavelengths},
   author={Brown, John and Jackson, Willis},
@@ -1986,34 +2012,6 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1962},
   publisher={IEEE}
 }
-
-
-@article{kock1948metallic,
-  title={Metallic delay lenses},
-  author={Kock, Winston E},
-  journal={Bell System Technical Journal},
-  volume={27},
-  number={1},
-  pages={58--82},
-  year={1948},
-  publisher={Wiley Online Library}
-}
-@techreport{merkel1973simulation,
-  title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
-  author={Merkel, George},
-  year={1973},
-  institution={DTIC Document}
-}
-@article{rayleigh1892,
-  title={On the influence of obstacles arranged in rectangular order upon the properties of a medium},
-  author={Rayleigh, Lord},
-  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
-  volume={34},
-  number={211},
-  pages={481--502},
-  year={1892},
-  publisher={Taylor \& Francis}
-}
 @article{bose1898rotation,
   title={On the rotation of plane of polarisation of electric waves by a twisted structure},
   author={Bose, Jagadis Chunder},
@@ -2024,22 +2022,42 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1898},
   publisher={The Royal Society}
 }
-@article{emerson1997work,
-  title={The work of Jagadis Chandra Bose: 100 years of mm-wave research},
-  author={Emerson, DT},
-  journal={IEEE Transactions on Microwave Theory and Techniques},
-  volume={45},
-  number={12},
-  year={1997}
+
+@article{shamonina2007metamaterials,
+  title={Metamaterials: How the subject started},
+  author={Shamonina, E and Solymar, L},
+  journal={Metamaterials},
+  volume={1},
+  number={1},
+  pages={12--18},
+  year={2007},
+  publisher={Elsevier}
 }
-@article{eleftheriades2012transforming,		
+
+
+@article{eleftheriades2012transforming,
   title={Transforming electromagnetics using metamaterials},
-  author={Eleftheriades, George V~and Selvanayagam, Michael},
+  author={Eleftheriades, George V and Selvanayagam, Michael},
   journal={Microwave Magazine, IEEE},
   volume={13},
   number={2},
   pages={26--38},
   year={2012},
-  publisher={IEEE},
-  url={http://anlage.umd.edu/06167594.pdf},
+  publisher={IEEE}
+}
+
+
+
+@techreport{merkel1973simulation,
+  title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
+  author={Merkel, George},
+  year={1973},
+  institution={DTIC Document}
+}
+@online{moroz,
+  author = {Moroz, Alexander},
+  title = {Some negative refractive index material headlines long before Veselago work and going back as far as to 1905},
+  year = 2009,
+  url = {http://www.wave-scattering.com/negative.html},
+  urldate = {2015-07-30}
 }
