--- a/intro.tex
+++ b/intro.tex
@@ -31,7 +31,11 @@ These deficiencies provide additional reasons to search for the new possibilitie
 % 2  put all particular metamaterial systems into a perspective for comparison
 % 3  showcase the Python-MEEP scripts for metamaterial simulation
 % 4  note that, although many successes have been achieved, all metamaterial application still suffer from fundamental issues as excessive losses and anisotropy
+%	 and on the example of dielectric rods, show that it probably can not be overcome without a significant breakthrough
 % 5  stress that the metamaterial and photonic crystal fields should be unified in terminology and approaches
+% 6  by the way, point out some pertaining misconceptions, such as that MMs are completely novel, that they are the only way to achieve negative refraction or 
+%    vice versa that negative refraction is their sole purpose, ...
+
 
 \section{Outline of the chapters}
 \paragraph{Theory} %{{{
