--- a/theory.tex
+++ b/theory.tex
@@ -1040,6 +1040,8 @@ This difference arises from the fact that the behaviour of the structure does no
 %% %}}}
 
 \section{Metamaterials and photonic crystals}
+\subsection{Historical notes} 
+\paragraph{One history of three paradigms} %{{{
 The scientific progress rarely follows a straightforward, efficient way. Making a brief historical review is therefore important to understand the current state of research, and following the reasoning behind it may even help to understand the actual physical theory. 
 
 Moreover, author perceives that the field covered by this thesis is also somewhat burdened by confusion of the terminology: objects falling under the definition of \textit{periodic structures} have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{photonic band-gap materials} or \textit{electromagnetic composites}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition, and may or may not overlap in their meaning. An inconsistent terminology is apparently not only a formal issue, as it psychologically divides the scientific community and affects the future research.
@@ -1048,7 +1050,9 @@ Physics, and the fields of photonics in particular, have developed rapidly in th
 
 The following humble review of the history of metamaterials and photonic crystals is divided into three paradigms that developed independently and in parallel, and were unified only much later. Although each of them, on its own, might have seemed to already have given their fruits, it is their \textit{unification} what renewed the scientific interest and pushed the research further.
 
-\subsection{Historical notes} 
+Useful resources on the history of the field are, e.g. in \cite{shamonina2007metamaterials,eleftheriades2012transforming} and at the web pages of Moroz \cite{moroz}.
+
+%}}}
 \paragraph{Photonic band-gap structures} %{{{
 In 1887, Lord Rayleigh \cite{johnson2003introduction} noticed the light reflecting in the volume of a transparent crystal composed of thin periodic layers of slightly different optical properties. X-ray scattering on crystals was observed by Max von Laue \cite{friedrich1913interferenzerscheinungen} and explained by W. H. and W. L. Bragg in 1910s \cite{bragg1913reflection}. 
 Both effects are due to a presence of a Bragg band-gap, that is, enabled by the constructive interference of the wave reflected from the layers, either of different optical properties in the Rayleigh's experiment, or composed of the atomic lattice in the X-ray case. 
@@ -1076,7 +1080,7 @@ Third independent paradigm was based on arranging sub-wavelength particles to ob
 
 Its roots can be traced to the late 19th century, when the scientific community resolved the question of how the polarizability of individual atoms in a matter affects the macroscopic permittivity. Except for gases, their mutual interaction is not negligible and the answer formulated as the \textit{Lorentz-Lorenz} (or, \textit{Clausius-Mossoti}) formula is less trivial than might be expected. However, thanks to the atomic size being negligible compared to the optical wavelength, all transparent media were successfully approximated as homogeneous. 
 
-Subwavelength wire arrays have been used at least since 1898 as microwave polarisers. From the same time, also the concept of assembling a microwave polarisation rotator from organic or metallic helices is known \cite{bose1898rotation, emerson1997work}.
+Subwavelength wire arrays have been used at least since 1898 as microwave polarisers. From the same time, also the concept of assembling a microwave polarisation rotator from organic or metallic helices is known \cite{bose1898rotation, emerson}.
 
 Inspired by the Lorentz-Lorenz formula, Lord Rayleigh theoretically elaborated the wave propagation through a rectangular lattice of cylindrical or spherical particles, which dates back to 1892. He also noted an analogy between electromagnetic and acoustic waves \cite[p. 498]{rayleigh1892}. His thoughtful analysis was however still focused to the \textit{static limit} of frequencies negligible to any resonance frequency of the particle. 
 
@@ -1097,7 +1101,7 @@ This is probably the reason why metamaterials are often associated with negative
 Note that the concept of metamaterials is not even limited to electrodynamics; macroscopic mechanical structures were demonstrated to exhibit comparable phenomena for acoustic waves.
 
 %}}}
-\paragraph{Unification of structures with uncommon parameters with band-gaps and spatial dispersion}			%% TODO%{{{
+\paragraph{Unification of structures with uncommon parameters with band-gaps and spatial dispersion} %%						 TODO%{{{
 The unification between 
 
 mm ??
@@ -1110,8 +1114,13 @@ term first used in
 %% Definitions:
 % phc, mm, "electromagnetic materials"
 
-%}}}
+PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
+\cite{yannopapas2005negative}
+
+Any dielectric material can be used to fabricate a photonic crystal with a sizeable and robust complete photonic bandgap (CPBG) in three dimensions, as long as small metal inclusions can be added.
+
+%}}}
 \subsection{Applications of photonic crystals} 
 \paragraph{One-dimensional band-gap structures}%{{{
 \add{
@@ -1135,13 +1144,8 @@ Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional ligh
 \paragraph{Photonic filters}%{{{
 
 %}}}
-% -> PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
 \subsection{Applications of metamaterials} 
-
-Reviewed in 
-% 
-\cite{eleftheriades2012transforming
 
 
 \paragraph{Negative and unusual values of effective parameters}%{{{
