--- a/expe.tex
+++ b/expe.tex
@@ -4,7 +4,7 @@
 The numerical data could be in some cases corroborated by experimental measurement using the \textit{time-domain terahertz spectroscopy} (TDTS) in our laboratory. 
 % Note: it would be useful to find: Grüner - 1998 - Millimeter and Submillimeter Wave Spectroscopy of
 
-The basic principle of the measurement was shared with the scattering-parameter retrieval in FDTD simulations. % TODO add ref
+The basic principle of the measurement was shared with the scattering-parameter retrieval in FDTD simulations presented later in Chapter \ref{chapter_sparam}.
  A short, broadband pulse impinged the sample, one part of its energy was transmitted, another reflected and the rest was dissipated in the sample. The transmitted pulse was then recorded by the time-domain sampling setup, and processed to obtain the transmission amplitude and phase as functions of frequency.
 
 The reflection could not be directly measured in the setup described, but at the end of this section an indirect method is described that allows to compute the equivalent sample properties from the subsequent echoes, that are introduced when the sample is surrounded by thick transparent slabs of sapphire. 
@@ -78,6 +78,7 @@ from the numerically predicted results, which were moreover sensitive to subtle 
  that the reliable reflection data can only be retrieved at frequencies where also the transmission amplitude is strong enough for the signal not to be dominated by noise. }
  \end{enumerate}
 %}}}
+
 \section{Fabrication of the titanium dioxide microspheres}
 % todo having discussed the measurement, we proceed to the fabrication of samples
 %The samples dielectric microspheres were manufactured by one of the collaborating groups.
@@ -156,6 +157,7 @@ With the acoustic power and frequency correctly adjusted, the particles formed a
 The amount of particles in one batch was limited to ca. 10--20 mm$^{3}$, otherwise the sieve would be covered with a layer too thick, which could not be efficiently lifted by the acoustic pressure.
 It could however be remedied by tilting the apparatus. With a tilt of 5--10 degrees, the bulk of particles then accumulated near one side, leaving most of the sieve surface free for sieving the moving fraction of particles. According to the small amount of particles required for the terahertz spectroscopy measurements, it is however advisable to sort a batch in order of 1--3 mm$^{3}$.
 %}}}
+
 \section{Optical determination of microparticle statistics}
 %{{{
 Accurate characterisation of the particle statistics was necessary not only to assess the efficacy of sieving, but also to explain possible difference between the measured terahertz spectra and the computed ones on a quantitative basis. To obtain reliable statistics, thousands of particles needed to be evaluated, repeatedly for every sample. This, along with the small dimensions of particles, indicated that the most viable way to do so would be the optical microphotography with computer image processing automatically resolving each particle.
