--- a/theory.tex
+++ b/theory.tex
@@ -1044,7 +1044,7 @@ This difference arises from the fact that the behaviour of the structure does no
 \paragraph{One history of three paradigms} %{{{
 The scientific progress rarely follows a straightforward, efficient way. Making a brief historical review is therefore important to understand the current state of research, and following the reasoning behind it may even help to understand the actual physical theory. 
 
-Moreover, author perceives that the field covered by this thesis is also somewhat burdened by confusion of the terminology: objects falling under the definition of \textit{periodic structures} have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{photonic band-gap materials} or \textit{electromagnetic composites}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition, and may or may not overlap in their meaning. An inconsistent terminology is apparently not only a formal issue, as it psychologically divides the scientific community and affects the future research.
+Moreover, author perceives that the field covered by this thesis is also somewhat burdened by confusion of the terminology: objects falling under the definition of \textit{periodic structures} have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{nanostructured materials}, \textit{photonic band-gap materials} or \textit{electromagnetic composites}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition, and may or may not overlap in their meaning. An inconsistent terminology is apparently not only a formal issue, as it psychologically divides the scientific community and affects the future research.
 
 Physics, and the fields of photonics in particular, have developed rapidly in the recent decades. It may be useful to note that some of the seemingly novel concepts were in fact conceived much longer ago  , and that sometimes the mere change in terminology can lead one to disregard, and later painstakingly and expensively re-invent concepts that were already known \cite[p. 5]{klingshirn2007semiconductor}. 
 
@@ -1086,6 +1086,8 @@ Inspired by the Lorentz-Lorenz formula, Lord Rayleigh theoretically elaborated t
 
 Similar quasi-periodic structures were employed in the 1940s to construct lightweight lenses for microwave frequencies \cite{kock1948metallic}. Usually the particles consisted of metal waveguides or metal spheres/disks which increased or reduced the wave phase velocity, respectively. These structures still operated in the static limit below any resonance, allowing one to engineer the broad-band permittivity tensor. Accordingly, they were denoted as \textit{artificial dielectrics} \cite{brown1955properties}. 
 
+%% PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true?
+
 %% TODO bruggemann and maxwell-garnett theories for composites; note the composites may be somewhat random if in quasi-static case
 
 %}}}
@@ -1101,7 +1103,7 @@ This is probably the reason why metamaterials are often associated with negative
 Note that the concept of metamaterials is not even limited to electrodynamics; macroscopic mechanical structures were demonstrated to exhibit comparable phenomena for acoustic waves.
 
 %}}}
-\paragraph{Unification of structures with uncommon parameters with band-gaps and spatial dispersion} %%						 TODO%{{{
+\paragraph{Second unification with band-gaps and spatial dispersion} %%						 TODO%{{{
 The unification between 
 
 mm ??
@@ -1298,13 +1300,15 @@ At the resonant frequencies in the metamaterials, the majority of the energy of 
 %}}}
 \paragraph{Difference in purpose and way of thinking}%{{{
 
+The \textit{For Beginners} page of the ECONAM project states
+Metamaterial is an arrangement of artificial structural elements, designed to achieve advantageous and unusual electromagnetic properties
+
 existence of effective parameters
 
 \cite{sihvola2009metamaterials}
 
 \add{MMs are about HOW the light propagates. PhCs are about WHETHER the light propagates.}
 
-PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true?
 %}}}
 
 \subsection{Metamaterial homogenization} % note that NRW and CDH are discussed later
