--- a/intro.tex
+++ b/intro.tex
@@ -1,12 +1,15 @@
 \section{Electromagnetism of periodic structures} %{{{
 The peculiar behaviour of electromagnetic waves in periodic structures has attracted human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies or peacocks. 
 
-The scientific community started to study the underlying phenomena in the late 19th century when the X-ray scattering was observed on crystal lattices (W. H. and W. L. Bragg, \todo{19xx}) and when the high optical reflection from periodic layers of entirely transparent materials was predicted (Lord Rayleigh, 1870s). Note that not all related research was focused on electromagnetism -- for example, the Bloch theorem, discussed later in this thesis, was originally developed for the electron waves in solids (F. Bloch, \todo{19xx}).
+The scientific community started to rigorously study the underlying phenomena in the late 19th century.  
+% TODO add supershort examples from the History section here
+% Note that not all related research was focused on electromagnetism -- for example, the Bloch theorem, discussed later in this thesis, was originally developed for the electron waves in solids (F. Bloch, \todo{19xx}).
+Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term \textit{photonics} was coined for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a practically irreplaceable role in the high-bandwidth telecommunication, science and industry.
 
-Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term \textit{photonics} was coined \todo{in the 19xxs} for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a practically irreplaceable role in the high-bandwidth telecommunication, science and industry.
-
-Out of all structures studied, arguably the largest theoretical attention was attracted to structures that are periodic.
-Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously. One paradigm of \textit{photonic crystals} was inspired by the electron waves in crystals; slightly later the paradigm of \textit{metamaterials} was inspired by the electromagnetic waves in homogeneous materials. 
+Out of all structures studied in photonics, particularly strong theoretical attention was attracted to structures that are periodic. %% TODO this needs stylistic fixes
+Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
+Interestingly, different paradigms emerged, and only later they joined, as is discussed in more details in the further text.
+One paradigm of \textit{photonic crystals} was inspired by the electron waves in crystals; slightly later the paradigm of \textit{metamaterials} was inspired by the electromagnetic waves in homogeneous materials. 
 
 The key concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure unit cell. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
 While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials. 
