changed num meth to algorithm

--- a/appendices.tex
+++ b/appendices.tex
@@ -30,9 +30,9 @@ the resulting Fabry-Pérot resonances result in the typical Fresnel-Airy functio
 Abbreviation & Meaning	\\
  \hline
 EDB		& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
-FDTD 		& Finite-difference time-domain (numerical simulation)\\
-FDFD 		& Finite-difference frequency-domain (numerical simulation)\\
-FEM 		& Finite-element method (numerical simulation)\\
+FDTD 		& Finite-difference time-domain (algorithm)\\
+FDFD 		& Finite-difference frequency-domain (algorithm)\\
+FEM 		& Finite-element method (algorithm)\\
 FFT 		& Fast Fourier transform (algorithm)\\
 FRoI 		& Frequency range of interest\\
 FDM 		& Filter diagonalisation method (algorithm)\\
@@ -44,10 +44,11 @@ NGV 		& Negative group velocity\\
 PBG		& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
-PWEM 		& Plane-wave expansion method (numerical simulation)\\
+PWEM 		& Plane-wave expansion method (algorithm)\\
 STO		& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 SRR		& Split-ring resonator\\
 TDTS 		& Time-domain terahertz spectroscopy\\
+%TMM			& Transfer-matrix method  (numerical computation)\\
  \bottomrule
  \end{tabular} \end{table}
 %}}}
