--- a/intro.tex
+++ b/intro.tex
@@ -1,29 +1,22 @@
-\section{Electromagnetism of periodic structures} %{{{
+\section{Light in periodic structures} %{{{
 The peculiar behaviour of electromagnetic waves in periodic structures has attracted human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies or peacocks. 
 
-The scientific community started to rigorously study the underlying phenomena in the late 19th century.  
-% TODO add supershort examples from the History section here
-% Note that not all related research was focused on electromagnetism -- for example, the Bloch theorem, discussed later in this thesis, was originally developed for the electron waves in solids (F. Bloch, \todo{19xx}).
-Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term \textit{photonics} was coined for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a practically irreplaceable role in the high-bandwidth telecommunication, science and industry.
+The scientific community started to rigorously study the underlying phenomena in the late 19th century.
+Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term of \textit{photonics} was coined for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a practically irreplaceable role in the high-bandwidth telecommunication, science and industry.
 
-Out of all structures studied in photonics, particularly strong theoretical attention was attracted to structures that are periodic. %% TODO this needs stylistic fixes
-Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
-Interestingly, different paradigms emerged, and only later they joined, as is discussed in more details in the further text.
-One paradigm of \textit{photonic crystals} was inspired by the electron waves in crystals; slightly later the paradigm of \textit{metamaterials} was inspired by the electromagnetic waves in homogeneous materials. 
+Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. %% TODO this needs stylistic fixes
+%Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
+Three different paradigms were developed independently, as is described later in the historical section. While \textit{photonic crystals} were inspired by the electron waves in crystals, \textit{metamaterials} were inspired by the electromagnetic waves in homogeneous materials. Early treatises of electrodynamics in media with negative or unusual parameters did not assume any structuring or other way of how these parameters should be achieved. Later they joined into one field, which is elaborated in this thesis.
 
-The key concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure unit cell. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
+The unifying concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure unit cell. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
 While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials. 
 
 \section{Motivation for terahertz photonics}
 This work focuses on periodic structures operating in the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used in the whole electromagnetic spectrum, the selected frequency range defines the properties of constituent materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, materials such as glass, most plastics etc. commonly used in other spectral ranges must be avoided, since they exhibit excessively high losses in the terahertz range.
 
-The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the paradigm of high-frequency electronics is used, and the infrared and optical region where classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, concepts from both paradigms are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc. 
-%% ... gap in the generation of electromagnetic radiation, extending ap- proximately from 0.5 THz to 2 THz, stems from the separation of the two general
-%%paradigms for generating electromagnetic waves (1–3): alternating currents in semiconductor- based electronics and electronic transitions be- tween quantized electronic states in lasers,
-%%respectively. The frequency of semiconductor devices is bounded from above by limits of the electron velocities, whereas the frequency of solid-
-%%state lasers is bounded from below by thermal energies that limit the smallest electronic transitions useful for lasing...
+The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the paradigm of high-frequency electronics is used, and the infrared and optical region where classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, concepts from both paradigms are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc.  %% TODO - maybe write examples that are better covered by the use of MMs or PhCs
 
-Yet none of these approaches is optimal for the THz applications; from the electronic point of view, there is still demand for fast-enough diodes and power transistors and the microstrip circuits become too lossy at high frequencies. The optical approach is often burdened by the strong wave-optics phenomena such as diffraction, and moreover some light-matter interactions are weaker than at the optical frequencies, limiting the possibilities for e.g. amplitude modulation by Pockels effect. 
+Yet none of these two approaches is optimal for the THz applications; from the electronic point of view, there is still demand for fast-enough diodes and power transistors and the microstrip circuits become too lossy at high frequencies. The optical approach is often burdened by the strong wave-optics phenomena such as diffraction, and moreover some light-matter interactions are weaker than at the optical frequencies, limiting the possibilities for e.g. amplitude modulation by Pockels effect. 
 
 These deficiencies provide additional reasons to search for the new possibilities opened by photonic devices and periodic structures operating in the terahertz range.  
 
@@ -31,6 +24,10 @@ These deficiencies provide additional reasons to search for the new possibilitie
 \section{Goals of the thesis}
 % 0  present an accessible introduction to the topic
 % 1  emphasize the importance of spatial-dispersive electrodynamics
+spatially-dispersive media, that is, to account for the material properties depending not only on the frequency, but also on the magnitude of the wave vector.
+Multiple examples of weak spatial dispersion can be found in natural media, but for the description of  
+In the author's opinion, this topic does not receive due attention in most of the literature.
+
 % 2  put all particular metamaterial systems into a perspective for comparison
 % 3  showcase the Python-MEEP scripts for metamaterial simulation
 % 4  note that, although many successes have been achieved, all metamaterial application still suffer from fundamental issues as excessive losses and anisotropy
@@ -39,26 +36,21 @@ These deficiencies provide additional reasons to search for the new possibilitie
 % 6  by the way, point out some pertaining misconceptions, such as that MMs are completely novel, that they are the only way to achieve negative refraction or 
 %    vice versa that negative refraction is their sole purpose, ...
 
-
-\section{Outline of the chapters}
+\section{Outline and goals of the thesis}
 \paragraph{Theory} %{{{
-The theoretical chapter starts with a review of linear \textit{electrodynamics of continuous media} with an account for anisotropy. In its customary form without account for spatial dispersion, this topic is treated in every related textbook. Many related topics such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the description of metamaterials in the rest of the thesis.  
+The theoretical chapter aims to present an accessible introduction to the electrodynamics of periodic structures. As a first step, it starts with a review of linear \textit{electrodynamics of continuous media}; the concepts of harmonic oscillators, dispersion curves, and isofrequency contours are introduced. The generalized index of refraction is introduced, and it is demonstrated how the wave refraction depends on the shape of isofrequency contours.
+%Many related topics, such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the selection of structures in rest of the thesis. 
 
-The classical electrodynamics for local media serves as a basis for the so-called Landau-Lifshitz (or, $EDB$) formulation of electrodynamics that can be easier extended also for spatially-dispersive media, that is, to account for the material properties depending not only on the frequency, but also on the magnitude of the wave vector.
-%, which is elaborated more in detail.  ---  in fact I should write more there.
-Multiple examples of weak spatial dispersion can be found in natural media, but for the description of  
-In the author's opinion, this topic does not receive due attention in most of the literature.
+The electrodynamic theory is generalized to account for the \textit{nonlocal} response, or equivalently \textit{spatial dispersion}, in the medium, a phenomenon which can be usually neglected in the natural media, but is of key importance in any conscientious treatise on electrodynamics of periodic structures.
+The less commonly used but advantageous Landau-Lifshitz (or, $EDB$) formulation of nonlocal medium parameters is introduced. 
 %% ((( first we build the theory from first principles, and using it we then easier classify the structures)))
 
-The Bloch theorem follows, along with its mathematical proof, which enables to recognize the traits of the continuum electrodynamics also in waves propagating in periodic structures. The impact on the shape of dispersion curves and on the ambiguity of the wave vector is discussed.
-
-The distinction of two widely recognized types of these, namely \textit{metamaterials} and \textit{photonic crystals}, is discussed from different aspects, with an emphasis on that the theoretical approaches used for each field can be unified and used for the other field as well.
+The third part of the theory is dedicated to periodic structures, starting with the Bloch theorem that enables one to transfer some of the concepts from continuous optics even to waves propagating in periodic structures. Its impact on the form of dispersion curves and on the ambiguity of the wave vector is shown.
+The distinction of two widely recognized types of periodic structures, namely \textit{metamaterials} and \textit{photonic crystals}, is discussed from historical, theoretical and practical aspects, with an emphasis on that the theoretical approaches used for each field can be unified and used for the other field as well.
 
 %}}}
-%%% TODO TODO TODO TODO TODO TODO 
-%%% Hole 1: Outline of the thesis, write
-%%% TODO TODO TODO TODO TODO TODO 
 \paragraph{Experimental methods} %{{{
+As a part of the research several experiments in the terahertz laboratory were performed. This section is opened by a systematic review of the terahertz sources and detectors, followed by 
 %The fourth section gives an overview of the experimental techniques that were used to fabricate the samples and measure their response to a broadband terahertz impulse.
 
 % TODO Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved.
@@ -67,7 +59,12 @@ The distinction of two widely recognized types of these, namely \textit{metamate
 
 %}}}
 \paragraph{Numerical methods} %{{{
-The  section focuses on the numerical methods we employed to predict experimental results and, most importantly, to understand the physical nature of the predicted phenomena. We provide a comparison of the finite-difference time-domain simulation (FDTD), the plane-wave expansion (PWE) and the transfer matrix method (TMM). We point out the capabilities of each of them and we also show how the results from these different methods can be processed to give comparable quantities.
+This section describes the tools and methods used to calculate the electromagnetic behaviour of periodic structures and, even more importantly, to understand the physical nature of the predicted phenomena. Its structure reflects the separation between the algorithms that solve the Maxwell equations as a purely numerical problem, and between the setups of the "numerical experiments" that are built atop the algorithms.
+
+Its first part provides a comparison of the finite-difference time-domain simulation (FDTD) 
+and the plane-wave expansion (PWE).
+%and the transfer matrix method (TMM). 
+We point out the capabilities of each of them and we also show how the results from these different methods can be processed to give comparable quantities.
 
 %The dissertation involved the development of a reliable platform for numerical simulations of photonic structures, based on freely available code. 
 %}}}
